<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="15dp"
        android:src="@drawable/searchbackicon" />


    <RelativeLayout
        android:id="@+id/relativeMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_btn"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:elevation="3dp">

        <TextView
            android:id="@+id/txtwWelocome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:padding="15dp"
            android:text="@string/signup"
            android:textColor="@color/colorLightBlack"
            android:textScaleX="1.3"
            android:textSize="@dimen/text_size_large" />
    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/relativeMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:id="@+id/ll_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:padding="24dp"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="User name"
            android:background="@drawable/bottom_line"
            android:imeOptions="actionNext"
            app:boxBackgroundMode="none">

            <EditText
                android:layout_height="wrap_content"
                android:singleLine="true"
                style="@style/EditText.Login"
                android:layout_width="match_parent"
                android:inputType="text"

                android:theme="@style/EditText.Login" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:background="@drawable/bottom_line"
            android:imeOptions="actionNext"
            app:boxBackgroundMode="none">

            <EditText
                android:layout_height="wrap_content"
                android:singleLine="true"
                style="@style/EditText.Login"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:theme="@style/EditText.Login" />


        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Your name"
            android:background="@drawable/bottom_line"
            android:imeOptions="actionNext"
            app:boxBackgroundMode="none">

            <EditText
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/edit_signup_yourname"
                style="@style/EditText.Login"
                android:layout_width="match_parent"
                android:inputType="text"
                android:theme="@style/EditText.Login" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/text_input_layout_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="Mobile"
            android:imeOptions="actionNext"
            android:background="@drawable/bottom_line"
            app:boxBackgroundMode="none">

            <EditText
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/edit_signup_mobile"
                style="@style/EditText.Login"
                android:layout_width="match_parent"
                android:inputType="number"
                android:theme="@style/EditText.Login" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:imeOptions="actionNext"
            android:background="@drawable/bottom_line"
            app:boxBackgroundMode="none">

            <EditText
                android:singleLine="true"
                android:id="@+id/edit_signup_email"
                style="@style/EditText.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:theme="@style/EditText.Login" />


        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:gravity="center"
            android:id="@+id/verify_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/ll_sign_in"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"

            android:background="@color/colorPrimary"
            android:contentDescription=""
            android:minHeight="10dp"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_normal"
            android:visibility="visible" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verify_btn"

            android:layout_gravity="center"
            android:layout_marginTop="20dp"

            android:orientation="horizontal"

            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/ifyohaveanaccount"
                android:textColor="@color/color_dark_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:orientation="vertical">

                <TextView

                    android:id="@+id/txtLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/login"
                    android:textColor="@color/colorLightBlack" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorWhite" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    </ScrollView>

</RelativeLayout>